<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textConnectivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dependingOnConnectivity" />

    <TextView
        android:id="@+id/textcontinueBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueBackground" />

    <TextView
        android:id="@+id/textSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnVrestSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VrestAccountSettings"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:visibility="invisible" />

</LinearLayout>