<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="8dip"
    android:background="@xml/myshape"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:ignore="Overdraw" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/VisualREST_Services"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/widget_upload"
            android:layout_width="80dip"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/widget_text_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/Automatic_upload"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/widgetUploadIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descAccountIcon"
                android:src="@drawable/wait_32" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_xmpp"
            android:layout_width="80dip"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/widget_text_xmpp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="@string/XMPPService"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/widgetXMPPIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:contentDescription="@string/descAccountIcon"
                android:src="@drawable/wait_32" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>